# leogpt

./: .gitignore  Design.drawio  README.md  app.py  pyproject.toml  requirements.txt
files/: resume.txt  summary.txt
specs/: record_unknown_question.json  record_user_details.json
src/leogpt/: __init__.py  __main__.py  api.py  asgi.py  chat.py  llm_client.py  llm_clients.py  main.py  prompts.py  tools.py  utils.py  whatsapp.py
